[package]
name = "daboss"
version = "0.1.0"
edition = "2021"
description = "A toy browser, for learning how browsers actually work."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

url = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "0.26"
cosmic-text = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
boa_engine = "0.20"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
